added icons and made the installer actially work

--- a/gtk/Makefile
+++ b/gtk/Makefile
@@ -1,18 +1,16 @@
 
-objs = src/Main.vala
+src = src/Main.vala
 pkgs = gtk+-3.0 src/resources.c
+out = texterInstaller
 
 all: resources.c
-	valac --gresources=res/resources.xml --pkg $(pkgs) $(objs) -o texterInstaller
+	valac --gresources=res/resources.xml --pkg $(pkgs) $(src) -o $(out)
 
 run: all
-	./texterInstaller
-
-srun: all
-	sudo ./texterInstaller
+	./$(out)
 
 resources.c: res/resources.xml $(shell glib-compile-resources --sourcedir res --generate-dependencies res/resources.xml)
 	glib-compile-resources --sourcedir res --target=src/$@  --generate-source $<
 
 clean:
-	rm src/resources.c texterInstaller
+	rm src/resources.c $(out)
